--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device- width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<link href="style.css" rel="stylesheet" type="text/css">
        <title>INFO2180 Lab 1</title>
    </head>
    <body>
@@ -10,10 +11,11 @@
 <p>This is a simple webpage for Lab 1 of INFO2180.</p> </header>
        <main>
            <h2>Kino-Paul Hurylington</h2>
-           <p>Energetic and passionate university student working towards a BSc. in Computer Science at University of the West Indies ,Mona.</p>
+           <img  src="image1.jpg"?\>
+           <p>I'm doing this course to learn more about developing amazing websites</p>
        </main>
        <footer>
-<p>Copyright &copy; 2020 <Your Name>.</p>
+<p>Copyright &copy; 2020 Kino-Paul.</p>
 </footer>
    </body>
 </html>
