Updated HTML File

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <p>This is a simple webpage for Lab 1 of INFO2180.</p> </header>
        <main>
            <h2>Kino-Paul Hurylington</h2>
-           <img  src="image1.jpg"?\>
+           <img  src="image.jpg"?\>
            <p>I'm doing this course to learn more about developing amazing websites</p>
        </main>
        <footer>
